# Parking_Systeme

./: .gitignore  Dockerfile  LICENSE  README.md  docker-compose.yml  main.py  pyproject.toml  try.py
alembic/: env.py
alembic/versions/: 61d7ddde9ec7_init.py  9604ae13a2b2_add_black_mark.py  c2a07de6fdbf_changes2.py  cfd2273e6dc7_change1.py
database/: models.py
parking_management/: db.sqlite3  manage.py
parking_management/accounts/: forms.py  models.py  views.py
parking_management/accounts/templates/accounts/: login.html  register.html
parking_management/parking_management/: asgi.py  settings.py  urls.py  wsgi.py
services/: auth.py  email.py
src/conf/: config.py
src/database/: db.py  models.py
src/neural_network/: neural_net.py
src/repository/: parking.py  parking_services.py  users.py
src/routes/: auth.py  parking.py  parking_services.py  users.py
src/schemas/: parking.py  user.py
src/services/: auth.py  email.py  roles.py
src/services/templates/: verify_email.html
